fix(home): adjust homepage image for high dpi screen

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -18,7 +18,7 @@
 <section layout="column">
 	<md-content>
 	  <section class="landing-header">
-			<img src="http://i.muskratmike.com/1638510.jpg" style="margin-top: -350px; max-width: 100%;  height: auto;">
+			<img src="http://i.muskratmike.com/1638510.jpg" style="max-width: 100%;  height: auto;">
 			<section class="landing-header-content" layout-padding style="text-align:center;">
 				<ul>
 					<li><a href="#/apis">Check out APIs <ng-md-icon icon="dashboard" style="fill:#08c;"></ng-md-icon></a></li>
