--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -38,87 +38,213 @@
 				</div>
 				<div layout="row" layout-wrap class="inset">
 					<div flex="33">
-						<md-card>
-							<div style="background-color: #f39c12; padding: 20px; border-top-right-radius: 3px; border-top-left-radius: 3px;">
-								<ng-md-icon icon="track_changes" size="64" style="fill: white; float:left;"></ng-md-icon>
-								<h3 style="color:white; margin-left:75px; margin-top: 20px; margin-bottom: 5px;">API 1</h3>
+						<md-card class="api-box">
+							<div class="api-box-header" style="background-color: #f39c12;">
+								<h3>API 1</h3>
+								<h5>v1.0.0</h5>
 							</div>
+							<div class="widget-user-image">
+            	</div>
 							<md-card-content>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla venenatis ante augue. Phasellus volutpat neque ac dui mattis vulputate. Etiam consequat aliquam cursus. In sodales pretium ultrices. Maecenas lectus est, sollicitudin consectetur felis nec, feugiat ultricies mi.</p>
-							</md-card-content>
-							<div class="md-actions" layout="row" layout-align="end center">
-								<md-button ng-href="#/apis/sub"><ng-md-icon icon="more_horiz" size="36" style="fill: #696969;"></ng-md-icon></md-button>
-							</div>
+								<div class="row">
+                <div class="col-sm-4 border-right">
+                  <div class="description-block">
+                    <h5 class="description-header">5</h5>
+                    <span class="description-text">APPLICATIONS</span>
+                  </div>
+                </div>
+                <div class="col-sm-4 border-right">
+                  <div class="description-block">
+                    <h5 class="description-header">130</h5>
+                    <span class="description-text">LIKERS</span>
+                  </div>
+                </div>
+                <div class="col-sm-4">
+                  <div class="description-block">
+                    <h5 class="description-header">
+											<md-button ng-href="#/apis/sub">
+												<ng-md-icon icon="more_horiz" size="36" style="fill: #696969;"></ng-md-icon>
+											</md-button>
+										</h5>
+                  </div>
+                </div>
+              </div>
+						</md-card-content>
 					</md-card>
     		</div>
 				<div flex="33">
-					<md-card>
-						<div style="background-color: #29b6f6; padding: 20px; border-top-right-radius: 3px; border-top-left-radius: 3px;">
-							<ng-md-icon icon="track_changes" size="64" style="fill: white; float:left;"></ng-md-icon>
-							<h3 style="color:white; margin-left:75px; margin-top: 20px; margin-bottom: 5px;">API 2</h3>
+					<md-card class="api-box">
+						<div class="api-box-header" style="background-color: #29b6f6;">
+							<h3>API 2</h3>
+							<h5>v1.0.0</h5>
 						</div>
+						<div class="widget-user-image">
+          	</div>
 						<md-card-content>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla venenatis ante augue. Phasellus volutpat neque ac dui mattis vulputate. Etiam consequat aliquam cursus. In sodales pretium ultrices. Maecenas lectus est, sollicitudin consectetur felis nec, feugiat ultricies mi.</p>
-						</md-card-content>
-					<div class="md-actions" layout="row" layout-align="end center">
-						<md-button ng-href="#/apis/sub"><ng-md-icon icon="more_horiz" size="36" style="fill: #696969;"></ng-md-icon></md-button>
-					</div>
+							<div class="row">
+              <div class="col-sm-4 border-right">
+                <div class="description-block">
+                  <h5 class="description-header">5</h5>
+                  <span class="description-text">APPLICATIONS</span>
+                </div>
+              </div>
+              <div class="col-sm-4 border-right">
+                <div class="description-block">
+                  <h5 class="description-header">130</h5>
+                  <span class="description-text">LIKERS</span>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="description-block">
+                  <h5 class="description-header">
+										<md-button ng-href="#/apis/sub">
+											<ng-md-icon icon="more_horiz" size="36" style="fill: #696969;"></ng-md-icon>
+										</md-button>
+									</h5>
+                </div>
+              </div>
+            </div>
+					</md-card-content>
 				</md-card>
 			</div>
 			<div flex="33">
-				<md-card>
-					<div style="background-color: #26c6da; padding: 20px; border-top-right-radius: 3px; border-top-left-radius: 3px;">
-						<ng-md-icon icon="track_changes" size="64" style="fill: white; float:left;"></ng-md-icon>
-						<h3 style="color: white; margin-left:75px; margin-top: 20px; margin-bottom: 5px;">API 3</h3>
+				<md-card class="api-box">
+					<div class="api-box-header" style="background-color: #26c6da;">
+						<h3>API 3</h3>
+						<h5>v1.0.0</h5>
 					</div>
+					<div class="widget-user-image">
+        	</div>
 					<md-card-content>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla venenatis ante augue. Phasellus volutpat neque ac dui mattis vulputate. Etiam consequat aliquam cursus. In sodales pretium ultrices. Maecenas lectus est, sollicitudin consectetur felis nec, feugiat ultricies mi.</p>
-					</md-card-content>
-					<div class="md-actions" layout="row" layout-align="end center">
-						<md-button ng-href="#/apis/sub"><ng-md-icon icon="more_horiz" size="36" style="fill: #696969;"></ng-md-icon></md-button>
+						<div class="row">
+            <div class="col-sm-4 border-right">
+              <div class="description-block">
+                <h5 class="description-header">5</h5>
+                <span class="description-text">APPLICATIONS</span>
+              </div>
+            </div>
+            <div class="col-sm-4 border-right">
+              <div class="description-block">
+                <h5 class="description-header">130</h5>
+                <span class="description-text">LIKERS</span>
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="description-block">
+                <h5 class="description-header">
+									<md-button ng-href="#/apis/sub">
+										<ng-md-icon icon="more_horiz" size="36" style="fill: #696969;"></ng-md-icon>
+									</md-button>
+								</h5>
+              </div>
+            </div>
+          </div>
+				</md-card-content>
+			</md-card>
+			</div>
+			<div flex="33">
+				<md-card class="api-box">
+					<div class="api-box-header" style="background-color: #26a69a;">
+						<h3>API 4</h3>
+						<h5>v1.0.0</h5>
 					</div>
+					<div class="widget-user-image">
+	      	</div>
+					<md-card-content>
+						<div class="row">
+			        <div class="col-sm-4 border-right">
+			          <div class="description-block">
+			            <h5 class="description-header">5</h5>
+			            <span class="description-text">APPLICATIONS</span>
+			          </div>
+			        </div>
+			        <div class="col-sm-4 border-right">
+			          <div class="description-block">
+			            <h5 class="description-header">130</h5>
+			            <span class="description-text">LIKERS</span>
+			          </div>
+			        </div>
+			        <div class="col-sm-4">
+			          <div class="description-block">
+			            <h5 class="description-header">
+										<md-button ng-href="#/apis/sub">
+											<ng-md-icon icon="more_horiz" size="36" style="fill: #696969;"></ng-md-icon>
+										</md-button>
+									</h5>
+			          </div>
+			        </div>
+			      </div>
+					</md-card-content>
 				</md-card>
 			</div>
 			<div flex="33">
-				<md-card>
-					<div style="background-color: #26a69a; padding: 20px; border-top-right-radius: 3px; border-top-left-radius: 3px;">
-						<ng-md-icon icon="track_changes" size="64" style="fill: white; float:left;"></ng-md-icon>
-						<h3 style="color:white; margin-left:75px; margin-top: 20px; margin-bottom: 5px;">API 4</h3>
+				<md-card class="api-box">
+					<div class="api-box-header" style="background-color: #259b24;">
+						<h3>API 5</h3>
+						<h5>v1.0.0</h5>
 					</div>
+					<div class="widget-user-image">
+	      	</div>
 					<md-card-content>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla venenatis ante augue. Phasellus volutpat neque ac dui mattis vulputate. Etiam consequat aliquam cursus. In sodales pretium ultrices. Maecenas lectus est, sollicitudin consectetur felis nec, feugiat ultricies mi.</p>
+						<div class="row">
+			        <div class="col-sm-4 border-right">
+			          <div class="description-block">
+			            <h5 class="description-header">5</h5>
+			            <span class="description-text">APPLICATIONS</span>
+			          </div>
+			        </div>
+			        <div class="col-sm-4 border-right">
+			          <div class="description-block">
+			            <h5 class="description-header">130</h5>
+			            <span class="description-text">LIKERS</span>
+			          </div>
+			        </div>
+			        <div class="col-sm-4">
+			          <div class="description-block">
+			            <h5 class="description-header">
+										<md-button ng-href="#/apis/sub">
+											<ng-md-icon icon="more_horiz" size="36" style="fill: #8bc34a;"></ng-md-icon>
+										</md-button>
+									</h5>
+			          </div>
+			        </div>
+			      </div>
 					</md-card-content>
-					<div class="md-actions" layout="row" layout-align="end center">
-						<md-button ng-href="#/apis/sub"><ng-md-icon icon="more_horiz" size="36" style="fill: #696969;"></ng-md-icon></md-button>
-					</div>
 				</md-card>
 			</div>
 			<div flex="33">
-				<md-card>
-					<div style="background-color: #259b24; padding: 20px; border-top-right-radius: 3px; border-top-left-radius: 3px;">
-						<ng-md-icon icon="track_changes" size="64" style="fill: white; float:left;"></ng-md-icon>
-						<h3 style="color:white; margin-left:75px; margin-top: 20px; margin-bottom: 5px;">API 5</h3>
+				<md-card class="api-box">
+					<div class="api-box-header" style="background-color: #26a69a;">
+						<h3>API 6</h3>
+						<h5>v1.0.0</h5>
 					</div>
+					<div class="widget-user-image">
+	      	</div>
 					<md-card-content>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla venenatis ante augue. Phasellus volutpat neque ac dui mattis vulputate. Etiam consequat aliquam cursus. In sodales pretium ultrices. Maecenas lectus est, sollicitudin consectetur felis nec, feugiat ultricies mi.</p>
+						<div class="row">
+			        <div class="col-sm-4 border-right">
+			          <div class="description-block">
+			            <h5 class="description-header">5</h5>
+			            <span class="description-text">APPLICATIONS</span>
+			          </div>
+			        </div>
+			        <div class="col-sm-4 border-right">
+			          <div class="description-block">
+			            <h5 class="description-header">130</h5>
+			            <span class="description-text">LIKERS</span>
+			          </div>
+			        </div>
+			        <div class="col-sm-4">
+			          <div class="description-block">
+			            <h5 class="description-header">
+										<md-button ng-href="#/apis/sub">
+											<ng-md-icon icon="more_horiz" size="36" style="fill: #696969;"></ng-md-icon>
+										</md-button>
+									</h5>
+			          </div>
+			        </div>
+			      </div>
 					</md-card-content>
-					<div class="md-actions" layout="row" layout-align="end center">
-						<md-button ng-href="#/apis/sub"><ng-md-icon icon="more_horiz" size="36" style="fill: #696969;"></ng-md-icon></md-button>
-					</div>
-				</md-card>
-			</div>
-			<div flex="33">
-				<md-card>
-					<div style="background-color: #8bc34a; padding: 20px; border-top-right-radius: 3px; border-top-left-radius: 3px;">
-						<ng-md-icon icon="track_changes" size="64" style="fill: white; float:left;"></ng-md-icon>
-						<h3 style="color:white; margin-left:75px; margin-top: 20px; margin-bottom: 5px;">API 6</h3>
-					</div>
-					<md-card-content>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla venenatis ante augue. Phasellus volutpat neque ac dui mattis vulputate. Etiam consequat aliquam cursus. In sodales pretium ultrices. Maecenas lectus est, sollicitudin consectetur felis nec, feugiat ultricies mi.</p>
-					</md-card-content>
-					<div class="md-actions" layout="row" layout-align="end center">
-						<md-button ng-href="#/apis/sub"><ng-md-icon icon="more_horiz" size="36" style="fill: #696969;"></ng-md-icon></md-button>
-					</div>
 				</md-card>
 			</div>
 		</div>
