refactor: fix typo

--- a/src/app/api/api_stub.html
+++ b/src/app/api/api_stub.html
@@ -19,7 +19,7 @@
   <section class="content-header">
     <h1>
        Gravitee
-       <small>API Stub Management (Stub version)</small>
+       <small>API Management (Stub version)</small>
     </h1>
 	</section>
 
