refactor: fix display of tab header

--- a/src/app/api/api_stub.html
+++ b/src/app/api/api_stub.html
@@ -25,7 +25,7 @@
 
 	<md-card>
 		<md-card-content>
-			<md-tabs md-dynamic-height md-border-bottom>
+			<md-tabs class="md-primary" md-dynamic-height md-border-bottom>
 		    <md-tab label="dashboard">
 		      <md-content class="md-padding">
 		        <h1 class="md-display-1">API Stub</h1>
@@ -53,17 +53,17 @@
 										<div flex="33">
 											<canvas id="radar" class="chart chart-radar"
 											  chart-data="data" chart-labels="labels">
-											</canvas> 
+											</canvas>
 										</div>
 										<div flex="33">
 											<canvas id="polar-area" class="chart chart-polar-area"
 											  chart-data="dataPie" chart-labels="labelsPie">
-											</canvas> 
+											</canvas>
 										</div>
 										<div flex="33">
 											<canvas id="doughnut" class="chart chart-doughnut"
 											  chart-data="dataPie" chart-labels="labelsPie">
-											</canvas> 
+											</canvas>
 										</div>
 									</div>
 								</div>
@@ -78,7 +78,7 @@
 								<md-card>
 									<div class="inset">
 										<h5>Policies</h5>
-										<md-divider></md-divider>																
+										<md-divider></md-divider>
 									</div>
 									<md-card-content>
 										<md-list>
@@ -110,7 +110,7 @@
 								<md-card>
 									<div class="inset">
 										<h5>API Policies</h5>
-										<md-divider></md-divider>																
+										<md-divider></md-divider>
 									</div>
 									<md-card-content>
 										<div style="background-color: #eee; min-height:450px; text-align:center">
