--- a/src/app/main/main.scss
+++ b/src/app/main/main.scss
@@ -36,9 +36,6 @@
   bottom: -11px;
   left: 50%;
   margin-left: -12px;
-  border: 5px solid #FFF;
-  border-radius: 20px;
-  background: #45AED6 none repeat scroll 0% 0%;
 }
 
 .widget-user .widget-user-image {
@@ -47,6 +44,11 @@
 	left: 50%;
 	margin-left: -45px;
 }
+
+.apis-box a, .apis-box a:link, .apis-box a:visited, .apis-box a:hover, .apis-box a:active {
+	text-decoration: none !important;
+  color: black !important;
+} 
 
 .api-box .border-right {
 	border-right: 1px solid #f4f4f4;
@@ -81,4 +83,14 @@
 	padding: 0;
 	font-weight: 600;
 	font-size: 16px;
+}
+
+.icon-circle {
+	display: inline-block;
+	width: 80px;
+	height: 80px;
+	line-height: 80px;
+	border: 2px solid #45aed6;
+	border-radius: 100px;
+	position: relative;
 }
