fix(api): fix api model during api create action

--- a/src/app/api/api.dialog.html
+++ b/src/app/api/api.dialog.html
@@ -51,14 +51,14 @@
           <md-icon md-svg-src="assets/images/icons/rocket.svg"></md-icon>
           <md-input-container>
             <label>Public URI *</label>
-            <input ng-model="api.public" required>
+            <input ng-model="api.proxy.context_path" required>
           </md-input-container>
         </div>
         <div layout="">
           <md-icon md-svg-src="assets/images/icons/rocket.svg"></md-icon>
           <md-input-container>
             <label>Target URI *</label>
-            <input ng-model="api.target" required>
+            <input ng-model="api.proxy.target" required>
           </md-input-container>
         </div>
         <div layout="">
