--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -19,12 +19,7 @@
 	<md-content>
 	  <section class="landing-header">
 			<div><img src="../../assets/images/landing-page-main-image.jpg" style="max-width: 100%;  height: auto;"></div>
-			<section class="landing-header-content" layout-padding style="text-align:center;">
-				<div class="section-main-header" style="text-align:center;">
-					<h2 style="visibility: visible; animation-name: fadeInDown;" class="section-title text-center wow fadeInDown animated">
-						GET STARTED
-					</h2>
-				</div>
+			<section class="landing-header-content" layout-padding style="text-align:center;">		
 				<div layout="row" layout-padding>
           <div flex="33">
             <div class="wow fadeInUp animated" data-wow-duration="400ms" data-wow-delay="0ms" style="visibility: visible; -webkit-animation: fadeInUp 400ms 0ms;">
@@ -33,7 +28,7 @@
                   <ng-md-icon icon="dashboard" style="fill:#08c;"></ng-md-icon>
                 </div>
 							</a>
-              <h3>Checkout APIs</h3>
+              <h3>Explore APIs</h3>
           </div>
         </div>
         <div flex="33">
@@ -102,8 +97,8 @@
 				<ul class="pagination">
 					<li><a href="#">...</a></li>
 				</ul>
-		</div>
-	</section>
- </section>
-</md-content>
+			</div>
+		</section>
+	 </section>
+	</md-content>
 </section>
